--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-linear-gradient": "^2.8.3",
-    "react-native-maps": "^1.10.2"
+    "react-native-maps": "^1.10.2",
+    "react-native-snap-carousel": "^3.9.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
