--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-native": "0.73.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.10.2",
-    "react-native-snap-carousel": "^3.9.1"
+    "react-native-snap-carousel": "^3.9.1",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
