--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.10.2",
     "react-native-reanimated": "^3.7.0",
