--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "web": "react-scripts start",
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/stack": "^6.3.21",
     "expo-linear-gradient": "^12.7.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-image-picker": "^7.1.0",
     "react-native-inappbrowser-reborn": "^3.7.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.10.2",
