--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/stack": "^6.3.21",
+    "axios": "^1.6.7",
     "expo-linear-gradient": "^12.7.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
