--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.3",
     "@react-native/typescript-config": "0.73.1",
+    "@types/axios": "^0.14.0",
     "@types/react": "^18.2.6",
+    "@types/react-native-snap-carousel": "^3.8.10",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
